window: fixed overflow problme.

--- a/src/window/window.scss
+++ b/src/window/window.scss
@@ -115,7 +115,7 @@ $bg-color:#1E1E1E;
         position: relative;
         width: 100%;
         grid-row: 2/3;
-        overflow: auto; // box-sizing: border-box;
+        overflow: hidden; // box-sizing: border-box;
     }
 }
 
